# libUTAU

./: .gitignore  CMakeLists.txt  README.md
include/: libUTAU.h
src/: DecipherPitch.cpp  EqualizingPitch.cpp  FlagsDecoder.cpp  FlagsDecoder.h  GetFreqAvg.cpp  GetUTAU64.cpp  PitchBendDecoder.cpp  PitchBendDecoder.h  ScaleConvert.cpp  ScaleConvert.h  UTAUException.h  UTAUParameterPaser.cpp  UTAUParameterPaser.h  UtauFlagParser.cpp  UtauFlagPaser.cpp  libUTAU.cpp  libUTAU.h
src/UTAU/: DecipherPitch.h  EqualizingPitch.h  GetFreqAvg.h  GetUTAU64.h  UtauFlagPaser.h
test/: PitchBendTest.cpp  ScaleConvertTest.cpp  libUTAUTest.cpp
